--- a/arquivos-web/mirrorfashion/css/estilos.css
+++ b/arquivos-web/mirrorfashion/css/estilos.css
@@ -2,23 +2,45 @@
 
 /* Alterando a fonte */
 body{
-    font-family: "Arial", "Helvetica", sans-serif;
-    border-color: red;
-    border-style: solid;
-    border-width: 1px;
+    color: #333333;
+    font-family: "lucida Sans Unicode", "Lucida Grande", sans-serif;
+    margin: 0px auto;
+    width: 940px;
 }
 
 h1{
-    font-family: serif;
     background-image: url('../img/sobre-background.jpg');
+    padding: 10px;
 }
 
 h2{
-    font-family: sans-serif;
+    border-bottom: 2px solid #333333;
+    margin-top: 30px;
+}
+
+h3{
+    background-color: #F2EDED;
 }
 
 p{
-    color:blue;
-    text-align: justify;
-    background-color: yellow;
+    padding: 0px 45px;
 }
+
+figure{
+    width: auto;
+    height: auto;
+    background-color: #F2EDED;
+    border-radius: 1px;
+    border-color: #cccccc;
+    border-style: solid;
+    text-align: center;
+    box-sizing: border-box;
+    margin: auto;
+    padding: auto;
+}
+
+figcaption{
+    font-style: italic;
+    margin-top: 10px;
+}
+
