--- a/arquivos-web/mirrorfashion/css/estilos.css
+++ b/arquivos-web/mirrorfashion/css/estilos.css
@@ -16,6 +16,7 @@ h1{
 h2{
     border-bottom: 2px solid #333333;
     margin-top: 30px;
+    clear: both;
 }
 
 h3{
@@ -26,6 +27,7 @@ p{
     padding: 0px 45px;
 }
 
+/*imagens*/
 figure{
     width: auto;
     height: auto;
@@ -39,8 +41,35 @@ figure{
     padding: auto;
 }
 
+figure#centro-distribuicao{
+    margin: 0px auto;
+    width: 300px;
+    float: right;
+}
+
+figure#centro-distribuicao img{
+    width: 290px;
+}
+
+figure#familia-pelho{
+    float: right;
+    margin: 0px 0px 10px 10px;
+}
+
 figcaption{
     font-style: italic;
     margin-top: 10px;
 }
 
+/*rodapé*/
+div#rodape{
+    color: #777777;
+    margin: 30px 0px;
+    padding: 30px 0px;
+}
+
+div#rodape img{
+    margin: 0px 30px 0px 0px;
+    vertical-align: middle;
+    width: 90px;
+}
