Change of name in the file  estilos.css for sobrestl.css, add file reset.css (css meyer.com) and formating header at the page index

--- a/arquivos-web/mirrorfashion/css/sobrestl.css
+++ b/arquivos-web/mirrorfashion/css/sobrestl.css
@@ -63,6 +63,7 @@ figcaption{
 
 /*rodapé*/
 div#rodape{
+    text-align: center;
     color: #777777;
     margin: 30px 0px;
     padding: 30px 0px;
