--- a/arquivos-web/mirrorfashion/css/sobrestl.css
+++ b/arquivos-web/mirrorfashion/css/sobrestl.css
@@ -8,6 +8,37 @@ body{
     width: 940px;
 }
 
+/* cabeçalho */
+header{position: relative;
+}
+
+/*menu de opções*/
+nav.menu-opcoes {
+    position: absolute;
+    bottom: 0px;
+    right: 0px;
+}
+
+nav.menu-opcoes ul{
+    font-size: 15pt;
+}
+
+nav.menu-opcoes ul li{
+    display: inline;
+    margin-left: 10px;
+    margin-right: 15px;
+}
+
+nav.menu-opcoes a{
+    color: #003366;
+}
+
+/*container*/
+.container{
+    margin: 0 auto;
+    width: 940px;
+}
+
 h1{
     background-image: url('../img/sobre-background.jpg');
     padding: 10px;
