learning avout precedence order

--- a/arquivos-web/mirrorfashion/css/estilo.css
+++ b/arquivos-web/mirrorfashion/css/estilo.css
@@ -162,6 +162,18 @@ section.busca form input[type=search]{
     margin: 2px;
     padding: 2px;
     padding-bottom: 10px;
+    transition: 0.7s;
+}
+
+.painel li:hover{
+    background-color: rgba(255, 255, 255, 0.8);
+    box-shadow: 0 0 5px #333333;
+    transition: 0.7s;
+    transform: scale(1.2) rotate(-5deg);
+}
+
+.painel li:nth-child(2n):hover	{
+    transform:	scale(1.2)	rotate(5deg);
 }
 
 .painel h2{
