--- a/arquivos-web/mirrorfashion/css/sobrestl.css
+++ b/arquivos-web/mirrorfashion/css/sobrestl.css
@@ -1,168 +1,249 @@
-@charset "UTF-8";
-
-/* Alterando a fonte */
-body{
-    color: #333333;
-    font-family: "lucida Sans Unicode", "Lucida Grande", sans-serif;
-    margin: 0px auto;
-    width: auto;
-}
-
-/* cabeçalho */
-header{position: relative;
-}
-
-/*menu de opções*/
-nav.menu-opcoes {
-    position: absolute;
-    bottom: 0px;
-    right: 0px;
-}
-
-nav.menu-opcoes ul{
-    font-size: 15pt;
-}
-
-nav.menu-opcoes ul li{
-    display: inline;
-    margin-left: 10px;
-    margin-right: 15px;
-}
-
-nav.menu-opcoes a{
-    color: #003366;
-}
-
-/*container*/
-.container{
-    margin: 0 auto;
-    width: 940px;
-}
-
-/* Pseudo Elementos */
-h1{
-    background-image: url('../img/sobre-background.jpg');
-    padding: 10px;
-}
-
-h1 + p{
-    text-indent: 0;
-}
-
-h2{
-    border-bottom: 2px solid #333333;
-    margin-top: 30px;
-    clear: both;
-}
-
-h3{
-    background-color: #F2EDED;
-}
-
-p{
-    padding: 0px 15px;
-}
-
-p::first-letter{
-    font-weight: bold;
-}
-
-:not(p) + p::first-line{
-    font-variant: small-caps;
-}
-
-/* artigos e sessões */
-article{
-    width: auto;
-    height: auto;
-    max-width: auto;
-}
-
-section{
-    width: auto;
-    height: auto;
-    margin: auto;
-}
-
-section p{
-    width: 600px;
-}
-
-/*imagens*/
-figure{
-    width: auto;
-    height: auto;
-    background-color: #F2EDED;
-    border-radius: 1px;
-    border-color: #cccccc;
-    border-style: solid;
-    text-align: center;
-    box-sizing: border-box;
-    margin: auto;
-    padding: auto;
-}
-
-figure#centro-distribuicao{
-    margin: 0px auto;
-    width: 300px;
-    float: right;
-}
-
-figure#centro-distribuicao img{
-    width: 290px;
-}
-
-figure#familia-pelho{
-    float: right;
-    margin: 0px 0px 10px 10px;
-}
-
-figcaption{
-    font-style: italic;
-    margin-top: 10px;
-}
-
-/*rodapé*/
-footer{
-    background-image: url('../img/fundo-rodape.png');
-    padding: 20px 0px;
-    clear: both;
-    width: auto;
-    height: auto;
-}
-
-div.container{
-    position: relative;
-}
-
-/*formatando o link */
-.social{
-    position: absolute;
-    top: -38px;
-    right: 0px;
-}
-
-.social a{
-    /*tamanho da imagem */
-    height: 32px;
-    width: 32px;
-    display: block;
-    text-indent: -9999px;
-}
-
-.social a[href*="facebook.com"]{
-    background-image: url('../img/facebook.png');
-}
-
-.social a[href*="twitter.com"]{
-    background-image: url('../img/twitter.png');
-}
-
-.social a[href*="plus.google.com"]{
-    background-image: url('../img/googleplus.png');
-}
-
-.social li{
-    float: left;
-    margin: 25px;
-}
+    @charset "UTF-8";
+    /* Alterando a fonte */
+    
+    body {
+        color: #333333;
+        font-family: "lucida Sans Unicode", "Lucida Grande", sans-serif;
+        margin: 0px auto;
+        width: auto;
+    }
+    /* cabeçalho */
+    
+    header {
+        position: relative;
+    }
+    /*menu de opções*/
+    
+    nav.menu-opcoes {
+        position: absolute;
+        bottom: 0px;
+        right: 0px;
+    }
+    
+    nav.menu-opcoes ul {
+        font-size: 15pt;
+    }
+    
+    nav.menu-opcoes ul li {
+        display: inline;
+        margin-left: 5px;
+        margin-right: 10px;
+    }
+    
+    nav.menu-opcoes a {
+        color: #003366;
+    }
+    /*container*/
+    
+    .container {
+        margin: 0 auto;
+        width: 940px;
+    }
+    /* Pseudo Elementos */
+    
+    h1 {
+        background-image: url('../img/sobre-background.jpg');
+        padding: 10px;
+    }
+    
+    h1+p {
+        text-indent: 0;
+    }
+    
+    h2 {
+        border-bottom: 2px solid #333333;
+        margin-top: 30px;
+        clear: both;
+    }
+    
+    h3 {
+        background-color: #F2EDED;
+    }
+    
+    p {
+        padding: 0px 15px;
+    }
+    
+    p::first-letter {
+        font-weight: bold;
+    }
+    
+     :not(p)+p::first-line {
+        font-variant: small-caps;
+    }
+    /* artigos e sessões */
+    
+    article {
+        width: auto;
+        height: auto;
+        max-width: auto;
+    }
+    
+    section {
+        width: auto;
+        height: auto;
+        margin: auto;
+    }
+    
+    section p {
+        width: 600px;
+    }
+    /*imagens*/
+    
+    figure {
+        width: auto;
+        height: auto;
+        background-color: #F2EDED;
+        border-radius: 1px;
+        border-color: #cccccc;
+        border-style: solid;
+        text-align: center;
+        box-sizing: border-box;
+        margin: auto;
+        padding: auto;
+    }
+    
+    figure#centro-distribuicao {
+        margin: 0px auto;
+        width: 300px;
+        float: right;
+    }
+    
+    figure#centro-distribuicao img {
+        width: 290px;
+    }
+    
+    figure#familia-pelho {
+        float: right;
+        margin: 0px 0px 10px 10px;
+    }
+    
+    figcaption {
+        font-style: italic;
+        margin-top: 10px;
+    }
+    /*rodapé*/
+    
+    footer {
+        background-image: url('../img/fundo-rodape.png');
+        padding: 20px 0px;
+        clear: both;
+        width: auto;
+        height: auto;
+    }
+    
+    div.container {
+        position: relative;
+    }
+    /*formatando o link */
+    
+    .social {
+        position: absolute;
+        top: -38px;
+        right: 0px;
+    }
+    
+    .social a {
+        /*tamanho da imagem */
+        height: 32px;
+        width: 32px;
+        display: block;
+        text-indent: -9999px;
+    }
+    
+    .social a[href*="facebook.com"] {
+        background-image: url('../img/facebook.png');
+    }
+    
+    .social a[href*="twitter.com"] {
+        background-image: url('../img/twitter.png');
+    }
+    
+    .social a[href*="plus.google.com"] {
+        background-image: url('../img/googleplus.png');
+    }
+    
+    .social li {
+        float: left;
+        margin: 25px;
+    }
+    /* media queries */
+    
+    @media (max-width:940px) {
+        .container {
+            width: 100%;
+        }
+        nav.menu-opcoes ul li {
+            display: inline;
+            margin-left: 5px;
+            margin-right: 10px;
+        }
+        /* resolution 280px */
+        @media (min-width:279px) {
+            .container {
+                width: 620px;
+                padding: 0px 5px;
+            }
+            h1 {
+                text-align: center;
+            }
+            h1+h1 {
+                display: none;
+            }
+            nav.menu-opcoes {
+                position: relative;
+                background-image: url(../img/sobre-background.jpg);
+            }
+            nav.menu-opcoes ul {
+                margin: 0px -40px;
+            }
+            nav.menu-opcoes ul li {
+                display: inline;
+                margin: 0px 4px;
+            }
+            nav.menu-opcoes ul li a {
+                font-size: 15pt;
+                font-weight: bold;
+            }
+            figure#centro-distribuicao {
+                margin: 0px auto;
+                width: 100%;
+                margin: 5px 0px 15px;
+            }
+            figure#centro-distribuicao img {
+                width: 100%;
+            }
+            figure#centro-distribuicao figcaption {
+                font-size: 15pt;
+                font-weight: bold;
+            }
+            /*familia pelho*/
+            figure#familia-pelho {
+                float: none;
+                margin: 0px;
+            }
+            figure#familia-pelho img {
+                width: 100%;
+            }
+            figure#familia-pelho figcaption {
+                font-size: 15pt;
+                font-weight: bold;
+            }
+            section p {
+                font-size: 17pt;
+            }
+        }
+        /* resolution 360px */
+        @media (min-width:359px) {
+            .container {
+                width: 620px;
+                padding: 0px 5px;
+            }
+            h1 {
+                text-align: center;
+            }
+            h1+h1 {
+                text-align: left;
+            }
+        }
+    }
